# patterns-devkit

./: .flake8  .gitignore  .pre-commit-config.yaml  CLOUD  LICENSE  README.md  make_setup.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: basis.yml  dags.yml  snapflow.yml  test.yml
basis/: __init__.py  api.py
basis/cli/: api.py  app.py  config.py  helpers.py  main.py  newapp.py
basis/configuration/: app.py  base.py  block.py  dataspace.py  edit.py  graph.py  node.py  path.py  project.py  storage.py
basis/core/: block.py  component.py  data_block.py  data_format.py  data_format_old.py  data_function.py  data_function_interface.py  data_resource.py  environment.py  external.py  flattener.py  function.py  function_interface.py  function_interface_manager.py  function_node.py  function_package.py  graph.py  module.py  node.py  object_type.py  operators.py  pandas_utils.py  pipe.py  pipe_interface.py  registries.py  runnable.py  runtime.py  runtime_resource.py  source_resource.py  storage.py  storage_resource.py  stream.py  streams.py
basis/db/: api.py  postgres.py  utils.py
basis/examples/: readme_examples.py
basis/execution/: context.py
basis/graph/: builder.py  computations.py  configured_node.py  graph.py  helpers.py  metadata.py
basis/helpers/: http.py  testing.py
basis/indexing/: components.py
basis/logging/: __init__.py  event.py
basis/migrations/: alembic.ini  env.py  script.py.mako
basis/node/: _methods.py  interface.py  node.py  simple_node.py
basis/project/: default_project_tmpl.py  project.py
basis/templates/: generator.py
basis/testing/: functions.py  pipes.py  utils.py
basis/utils/: ast_parser.py  common.py  data.py  modules.py  pandas.py  registry.py  typing.py  ulid.py  uri.py
clitest/newproj/: README.md  basis.yml
dags/: api.py
dags/cli/: app.py
dags/core/: component.py  data_block.py  environment.py  external.py  graph.py  module.py  node.py  operators.py  pipe.py  pipe_interface.py  runnable.py  runtime.py  streams.py
dags/db/: api.py  mysql.py  postgres.py  utils.py
dags/examples/: readme_examples.py
dags/indexing/: components.py
dags/logging/: __init__.py  event.py
dags/project/: default_project_tmpl.py  project.py
dags/testing/: pipes.py  utils.py
dags/utils/: common.py  data.py  pandas.py  typing.py
docs/: mkdocs.yml
examples/: old_readme.py  readme.py
examples/all_python/: class_format1.py  class_format2.py  function_format1.py  function_format2.py  graph copy.py  graph.py  graph.yml  mynode.py  othernode.py  sqlnode.py
examples/mega_yaml/: graph.yml  my_jinja_node.py  mynode.py  pynode2.py
examples/multifile_node/: graph.yml
examples/project/: production.yml  (+1 more)
newproj/: requirements.txt
patterns/: __init__.py
scripts/: make_docs.py
snapflow/: __init__.py  api.py
tests/: test_accumulate.py  test_cli_app.py  test_component.py  test_conversion.py  test_data_block.py  test_data_format.py  test_data_function.py  test_datatype.py  test_dbapi.py  test_e2e.py  test_environment.py  test_example.py  test_examples.py  test_execution.py  test_external.py  test_field_types.py  test_function.py  test_function_new.py  test_function_package.py  test_graph.py  test_helpers.py  test_metadata.py  test_module.py  test_otype.py  test_pipe.py  test_pipe_copy.py  test_registry.py  test_runnable.py  test_schema.py  test_snap.py  test_snap_package.py  test_sql_function.py  test_sql_pipe.py  test_sql_snap.py  test_storage.py  test_streams.py  test_utils.py  utils.py
(+661 files in other folders)
