[tool.poetry]
authors = ["AJ Alt <aj@getbasis.com>", "Ken Van Haren <kvh@getbasis.com>"]
description = "Data pipelines from re-usable components"
license = "BSD-3-Clause"
name = "basis-devkit"
packages = [
  {include = "basis"},
]
version = "0.1.9"

[tool.poetry.dependencies]
platformdirs = "^2.4.0"
pydantic = "^1.8.1"
python = "^3.8"
rich = "^12.0.1"
ruyaml = "^0.91.0"
# workaround for bug in typer 0.4 (https://github.com/tiangolo/typer/issues/377)
click = "8.0.4"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^4.0.1"
isort = "^4.3.21"
mypy = "^0.910"
pre-commit = "^2.1.1"
pytest = "^6.2.5"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
basis = "basis.cli.main:main"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | examples
  | basis/cli/templates/templates
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip_glob = "examples/*"
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-ra -q"
norecursedirs = []
testpaths = [
  "tests",
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
