[tool.poetry]
authors = ["AJ Alt <aj@patterns.app>", "Ken Van Haren <kvh@patterns.app>"]
description = "Data pipelines from re-usable components"
license = "BSD-3-Clause"
name = "patterns-devkit"
packages = [
  {include = "patterns"},
]
version = "1.2.0"

[tool.poetry.dependencies]
platformdirs = "^2.4.0"
pydantic = "^1.8.1"
python = "^3.8"
rich = "^12.0.1"
ruyaml = "^0.91.0"
click = "^8.1.0"
typer = {extras = ["all"], version = "^0.6.1"}
PyYAML = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^4.3.21"
mypy = "^0.910"
pre-commit = "^2.1.1"
pytest = "^7.1.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
patterns = "patterns.cli.main:main"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | examples
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip_glob = "examples/*"
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-ra -q"
norecursedirs = []
testpaths = [
  "tests",
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
