[tool.poetry]
authors = ["AJ Alt <aj@patterns.app>", "Ken Van Haren <kvh@patterns.app>"]
description = "Data pipelines from re-usable components"
license = "BSD-3-Clause"
name = "patterns-devkit"
packages = [
  {include = "patterns"},
]
version = "1.5.1"

[tool.poetry.dependencies]
platformdirs = "^2.4.0"
pydantic = "^1.8.1"
python = "^3.8.1"
rich = "^12.0.1"
ruyaml = "^0.91.0"
click = "^8.1.0"
typer = {extras = ["all"], version = "^0.7.0"}
pyyaml = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
patterns = "patterns.cli.main:main"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | examples
)/
'''

[tool.pytest.ini_options]
addopts = "-ra -q"
norecursedirs = []
testpaths = [
  "tests",
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
